--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+$primaryColor: #DFD5EC;
+$textColor: #2c2c2c;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@mixin container {
+    width: 80%;
+    margin: auto;
+}
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    color: $textColor;
+}
+
+h1,
+h2 {
+    font-family: 'Source Sans Pro', sans-serif;
+}
