--- a/src/app/components/layout/footer/footer.component.scss
+++ b/src/app/components/layout/footer/footer.component.scss
@@ -5,7 +5,7 @@
 }
 
 footer {
-    font-size: 1rem;
+    font-size: 0.75rem;
     background-color: $primaryColor;
     margin: 0;
     padding: 0.5rem;
@@ -13,6 +13,7 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
+    text-align: center;
 
     p {
         padding-bottom: 2rem;
