--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="logo">
                 <img src="/assets/images/task_manager_logo.png" alt="logo">
-                <h1>Manage Your Tasks</h1>
+                <h1>{{ title | titlecase }}</h1>
             </div>
         </div>
     </header>
