--- a/src/app/tasks/components/category/category.component.html
+++ b/src/app/tasks/components/category/category.component.html
@@ -1,1 +1,11 @@
-<p>category works!</p>
+<div class="container">
+    <div class="card">
+        <div class="title">
+            <h3>Meetings</h3>
+            <mat-icon aria-hidden="false" aria-label="arrow circle right">arrow_circle_right</mat-icon>
+        </div>
+        <div class="item-number">
+            <p>13 items in the list</p>
+        </div>
+    </div>
+</div>
