--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
 $primaryColor: #DFD5EC;
 $textColor: #2c2c2c;
+$cardColor: #D9D9D9;
 
 @mixin container {
     width: 80%;
@@ -15,6 +18,12 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
     font-family: 'Source Sans Pro', sans-serif;
+}
+
+h3 {
+    font-weight: bold;
+    font-size: 2rem;
 }
