rendered data in category list component

--- a/src/app/tasks/components/category-list/category-list.component.html
+++ b/src/app/tasks/components/category-list/category-list.component.html
@@ -1,3 +1,4 @@
-<app-category [category]="categories[0]">
-    
-</app-category>
+<div class="category-list">
+    <app-category *ngFor="let category of categories" [category]="category">
+    </app-category>
+</div>
