--- a/src/app/tasks/components/category/category.component.html
+++ b/src/app/tasks/components/category/category.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="card">
         <div class="title">
-            <h3> {{ category.title }}</h3>
+            <h3> {{ category.title | titlecase }}</h3>
             <mat-icon aria-hidden="false" aria-label="arrow circle right">arrow_circle_right</mat-icon>
         </div>
         <div class="item-number">
