routing to single category added

--- a/src/app/tasks/components/category/category.component.html
+++ b/src/app/tasks/components/category/category.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="card">
+    <div class="card" (click)="goToSingleCategory(category.title)">
         <div class="title">
             <h3> {{ category.title | titlecase }}</h3>
             <mat-icon aria-hidden="false" aria-label="arrow circle right">arrow_circle_right</mat-icon>
