--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,6 +1,6 @@
     <header>
         <div class="container">
-            <div class="logo">
+            <div class="logo" routerLink="">
                 <img src="/assets/images/task_manager_logo.png" alt="logo">
                 <h1>{{ title | titlecase }}</h1>
             </div>
