--- a/src/app/tasks/components/category/category.component.scss
+++ b/src/app/tasks/components/category/category.component.scss
@@ -11,6 +11,13 @@
     border-radius: 2rem;
     padding: 2rem 3rem 0;
     margin: 1rem;
+    transform: translateY(0);
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+        transform: translateY(-3px);
+        cursor: pointer;
+    }
 }
 
 .mat-icon {
