task cards added

--- a/src/app/tasks/components/category-list/category-list.component.html
+++ b/src/app/tasks/components/category-list/category-list.component.html
@@ -1,4 +1,5 @@
 <div class="category-list">
-    <app-category *ngFor="let category of categories" [category]="category">
+    <app-category 
+        *ngFor="let category of categories" [category]="category">
     </app-category>
 </div>
