--- a/src/app/shared/components/task/task.component.html
+++ b/src/app/shared/components/task/task.component.html
@@ -1,2 +1,16 @@
-<p>task works!</p>
+<div *ngIf="tasks">
+  <div *ngFor="let task of tasks" class="card">
+    <div class="title">
+      <h4>{{ task.title }}</h4>
+    </div>
+    <div>
 
+    </div>
+    <div>
+      {{ task.date | date: 'dd/MM/yyyy' }}
+    </div>
+  </div>
+</div>
+<div *ngIf="!tasks">
+  No tasks found for this category.
+</div>
