--- a/src/app/tasks/components/single-category/single-category.component.html
+++ b/src/app/tasks/components/single-category/single-category.component.html
@@ -1,1 +1,4 @@
-<p>single-category works!</p>
+<div *ngIf="category" class="container">
+  <h3>{{ category.title | titlecase }}</h3>
+  <app-task class="task-card-list"></app-task>
+</div>
