--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 $primaryColor: #DFD5EC;
 $textColor: #2c2c2c;
 $cardColor: #f1f1f1;
+$cardColor-white: #ffffff;
 
 @mixin container {
     width: 80%;
@@ -26,4 +27,8 @@ h3 {
 h3 {
     font-weight: bold;
     font-size: 2rem;
+}
+
+h4 {
+    font-size: 1.5rem;
 }
