--- a/src/app/shared/components/task/task.component.html
+++ b/src/app/shared/components/task/task.component.html
@@ -2,10 +2,27 @@
   <div *ngFor="let task of tasks" class="card">
     <div class="title">
       <h4>{{ task.title }}</h4>
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="menu button" class="menu-button">
+        <mat-icon class="menu-icon">more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>edit</mat-icon>
+          <span>Edit task</span>
+        </button>
+        <button mat-menu-item disabled>
+          <mat-icon>done</mat-icon>
+          <span>Complete task</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon><span class="material-symbols-outlined">
+            delete_forever
+            </span></mat-icon>
+          <span>Delete task</span>
+        </button>
+      </mat-menu>
     </div>
-    <div>
 
-    </div>
     <div>
       {{ task.date | date: 'dd/MM/yyyy' }}
     </div>
