--- a/src/app/shared/components/task/task.component.scss
+++ b/src/app/shared/components/task/task.component.scss
@@ -13,7 +13,6 @@
     transition: all 0.2s ease-in-out;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
 
     &:hover {
         transform: translateY(-3px);
@@ -28,4 +27,16 @@
     h3 {
         margin: 1.5rem 0;
     }
+}
+
+.title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.menu-button {
+    background-color: #fff;
+    padding: 0;
+    border: none;
 }
