--- a/src/app/components/layout/footer/footer.component.scss
+++ b/src/app/components/layout/footer/footer.component.scss
@@ -7,15 +7,13 @@
 footer {
     font-size: 0.75rem;
     background-color: $primaryColor;
-    margin: 0;
-    padding: 0.5rem;
-    height: 3rem;
+    padding: 1rem 0;
     width: 100%;
     position: fixed;
     bottom: 0;
     text-align: center;
 
     p {
-        padding-bottom: 2rem;
+        font-size: 1rem;
     }
 }
