--- a/src/app/shared/components/task/task.component.html
+++ b/src/app/shared/components/task/task.component.html
@@ -1,7 +1,10 @@
-<div *ngIf="tasks">
-  <div *ngFor="let task of tasks" class="card">
-    <div class="title">
-      <h4>{{ task.title }}</h4>
+<mat-card *ngFor="let task of tasks" class="card">
+  <mat-card-content class="card-header">
+    <mat-card-header>
+      <mat-card-title>{{ task.title }}</mat-card-title>
+      <mat-card-subtitle>{{ task.date | date: 'dd/MM/yyyy' }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions align="end">
       <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="menu button" class="menu-button">
         <mat-icon class="menu-icon">more_vert</mat-icon>
       </button>
@@ -10,24 +13,20 @@
           <mat-icon>edit</mat-icon>
           <span>Edit task</span>
         </button>
-        <button mat-menu-item disabled>
+        <button mat-menu-item>
           <mat-icon>done</mat-icon>
           <span>Complete task</span>
         </button>
         <button mat-menu-item>
           <mat-icon><span class="material-symbols-outlined">
-            delete_forever
+              delete_forever
             </span></mat-icon>
           <span>Delete task</span>
         </button>
       </mat-menu>
-    </div>
-
-    <div>
-      {{ task.date | date: 'dd/MM/yyyy' }}
-    </div>
-  </div>
-</div>
+    </mat-card-actions>
+  </mat-card-content>
+</mat-card>
 <div *ngIf="!tasks">
   No tasks found for this category.
 </div>
