--- a/src/app/tasks/components/category/category.component.scss
+++ b/src/app/tasks/components/category/category.component.scss
@@ -4,11 +4,11 @@
     @include container
 }
 
+
 .card {
     min-width: 12rem;
-    height: 8rem;
+    min-height: 7rem;
     background-color: $cardColor;
-    border-radius: 2rem;
     padding: 2rem 3rem 0;
     margin: 1rem;
     transform: translateY(0);
@@ -18,18 +18,21 @@
         transform: translateY(-3px);
         cursor: pointer;
     }
+
+    p {
+        margin-top: 1rem;
+        font-size: 1rem;
+    }
+
+    h3 {
+        margin-top: 0;
+    }
 }
 
-.mat-icon {
-    font-size: 2rem;
+mat-icon {
+    margin: 0.25rem 0 0 2rem;
 }
 
-.title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-h3 {
+:host ::ng-deep .mat-card-header-text {
     margin: 0;
 }
