--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,9 +12,9 @@ $cardColor-white: #ffffff;
 
 html,
 body {
-    height: 100%;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+    min-height: 100%;
+    margin: 0 0 3rem 0;
+    font-family: 'Poppins', sans-serif !important;
     color: $textColor;
 }
 
@@ -27,8 +27,11 @@ h3 {
 h3 {
     font-weight: bold;
     font-size: 2rem;
+    margin-top: 2rem;
 }
 
 h4 {
     font-size: 1.5rem;
+    font-family: 'Poppins';
 }
+
