tests updated for single category component

--- a/src/app/tasks/components/single-category/single-category.component.scss
+++ b/src/app/tasks/components/single-category/single-category.component.scss
@@ -3,6 +3,16 @@
     @include container
 }
 
-h3 {
-    text-align: center;
+.header {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   column-gap: 2rem;
+}
+
+.menu-button {
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+    margin-top: 1.5rem;
 }
