--- a/src/app/components/layout/header/header.component.scss
+++ b/src/app/components/layout/header/header.component.scss
@@ -8,7 +8,7 @@ header {
     background-color: $primaryColor;
     margin: 0;
     padding-top: 1rem;
-    min-height: 3.5rem;
+    height: 3.5rem;
 }
 
 .logo {
