--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@ html,
 body {
     min-height: 100%;
     margin: 0 0 3rem 0;
+    font-family: 'Poppins', sans-serif !important;
     color: $textColor;
 }
 
@@ -28,3 +29,9 @@ h3 {
     font-size: 2rem;
     margin-top: 2rem;
 }
+
+h4 {
+    font-size: 1.5rem;
+    font-family: 'Poppins';
+}
+
