--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,5 @@ h3 {
     font-weight: bold;
     font-size: 2rem;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
