--- a/src/app/components/layout/footer/footer.component.scss
+++ b/src/app/components/layout/footer/footer.component.scss
@@ -5,15 +5,12 @@
 }
 
 footer {
-    font-size: 0.75rem;
+    font-size: 1rem;
     background-color: $primaryColor;
-    padding: 1rem 0;
+    padding-top: 1rem;
+    height: 3rem;
     width: 100%;
     position: fixed;
     bottom: 0;
     text-align: center;
-
-    p {
-        font-size: 1rem;
-    }
 }
