--- a/src/app/components/layout/header/header.component.scss
+++ b/src/app/components/layout/header/header.component.scss
@@ -6,7 +6,7 @@
 
 header {
     background-color: $primaryColor;
-    margin: 0;
+    margin: 0 0 2rem;
     padding-top: 1rem;
     height: 3.5rem;
 }
