--- a/src/app/tasks/components/category-list/category-list.component.scss
+++ b/src/app/tasks/components/category-list/category-list.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: center;
+    margin-top: 2rem;
     width: 90%;
-    margin: 0 auto;
 }
