--- a/src/app/components/layout/buttons/create-new-task-button/create-new-task/create-new-task.component.scss
+++ b/src/app/components/layout/buttons/create-new-task-button/create-new-task/create-new-task.component.scss
@@ -1,12 +1,18 @@
 .dialog-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     row-gap: 1.25rem;
     padding: 2.5rem;
+
+    h2 {
+        font-weight: 500;
+    }
 }
 
 .dialog-actions {
+    margin-top: 1rem;
+
     button {
         margin: 0.5rem;
     }
