--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 $primaryColor: #DFD5EC;
 $textColor: #2c2c2c;
 $cardColor: #f1f1f1;
+$headingLightColor: #fdfdfd;
+
 
 @mixin container {
     width: 80%;
@@ -12,7 +14,8 @@ $cardColor: #f1f1f1;
 html,
 body {
     min-height: 100%;
-    margin: 0 0 4rem;
+    margin: 0;
+    margin-bottom: 4rem;
     font-family: 'Poppins', sans-serif;
     color: $textColor;
 }
@@ -27,4 +30,3 @@ h3 {
     font-weight: bold;
     font-size: 2rem;
 }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
