--- a/src/app/components/layout/buttons/create-new-task-button/create-new-task-dialog/create-new-task-dialog.component.html
+++ b/src/app/components/layout/buttons/create-new-task-button/create-new-task-dialog/create-new-task-dialog.component.html
@@ -1,4 +1,26 @@
-<button mat-flat-button color="primary" (click)="openDialog()">
-    <mat-icon>add</mat-icon>
-    Create new task
-</button>
+<div class="dialog-form">
+    <h2 mat-dialog-title>Create New Task</h2>
+    <mat-form-field>
+        <input matInput placeholder="Enter task name here...">
+    </mat-form-field>
+
+    <mat-form-field>
+        <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field>
+        <mat-label>Add this task to the list:</mat-label>
+        <mat-select>
+            <mat-option *ngFor="let category of categories" [value]="category">
+                {{ category }}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <div class="dialog-actions">
+        <button mat-stroked-button color="primary" mat-dialog-close>Cancel</button>
+        <button mat-flat-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Save the task</button>
+    </div>
+</div>
