--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,2 +1,2 @@
-<div class="buttons"><app-create-new-task-dialog></app-create-new-task-dialog></div>
+<div class="buttons"><app-create-new-task></app-create-new-task></div>
 <app-category-list></app-category-list>
