--- a/src/app/components/layout/buttons/create-new-task-button/create-new-task-dialog/create-new-task-dialog.component.scss
+++ b/src/app/components/layout/buttons/create-new-task-button/create-new-task-dialog/create-new-task-dialog.component.scss
@@ -10,6 +10,16 @@
     }
 }
 
+.list-form-field {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+mat-icon {
+    cursor: pointer;
+}
+
 .dialog-actions {
     margin-top: 1rem;
 
