--- a/src/app/components/layout/buttons/create-new-task-button/create-category-dialog/create-category-dialog.component.html
+++ b/src/app/components/layout/buttons/create-new-task-button/create-category-dialog/create-category-dialog.component.html
@@ -1,10 +1,10 @@
 <h2 mat-dialog-title>Create New Category</h2>
-    <mat-dialog-content>
-      <mat-form-field>
-        <input matInput [(ngModel)]="categoryName" placeholder="Enter category name here...">
-      </mat-form-field>
-    </mat-dialog-content>
-    <mat-dialog-actions>
-      <button mat-stroked-button color="primary" mat-dialog-close>Cancel</button>
-      <button mat-flat-button color="primary" (click)="saveCategory()">Save Category</button>
-    </mat-dialog-actions>
+<mat-dialog-content>
+    <mat-form-field>
+        <input matInput [formControl]="categoryNameCtrl" placeholder="Enter category name here...">
+    </mat-form-field>
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-stroked-button color="primary" mat-dialog-close>Cancel</button>
+    <button mat-flat-button color="primary" (click)="saveCategory()">Save Category</button>
+</mat-dialog-actions>
