--- a/src/app/components/layout/buttons/create-new-task-button/create-new-task-dialog/create-new-task-dialog.component.html
+++ b/src/app/components/layout/buttons/create-new-task-button/create-new-task-dialog/create-new-task-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-form">
     <h2 mat-dialog-title>Create New Task</h2>
     <mat-form-field>
-        <input matInput placeholder="Enter task name here...">
+        <input matInput [formControl]="taskNameCtrl" placeholder="Enter task name here...">
     </mat-form-field>
 
     <mat-form-field>
@@ -19,7 +19,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <mat-icon matTooltip="Create a new category" (click)="openCreateCategoryDialog()">playlist_add</mat-icon>
+        <mat-icon matTooltip="Create new category" (click)="openCreateCategoryDialog()">playlist_add</mat-icon>
     </div>
 
     <div class="dialog-actions">
