--- a/src/app/components/layout/buttons/create-new-task-button/create-new-task-dialog/create-new-task-dialog.component.html
+++ b/src/app/components/layout/buttons/create-new-task-button/create-new-task-dialog/create-new-task-dialog.component.html
@@ -1,29 +1,35 @@
-<div class="dialog-form">
+<form [formGroup]="form" class="dialog-form">
     <h2 mat-dialog-title>Create New Task</h2>
     <mat-form-field>
-        <input matInput [formControl]="taskNameCtrl" placeholder="Enter task name here...">
+        <input matInput formControlName="taskName" placeholder="Enter task name here...">
+        <mat-error *ngIf="taskNameCtrl.hasError('required')">Task name is required</mat-error>
+        <mat-error *ngIf="taskNameCtrl.hasError('minLength')">Task name must have at least 3 characters</mat-error>
     </mat-form-field>
 
     <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+        <input matInput formControlName="date" [matDatepicker]="picker" placeholder="Choose a date">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
+        <mat-error *ngIf="dateCtrl.hasError('required')">Date is required</mat-error>
+        <mat-error *ngIf="dateCtrl.hasError('dateInvalid')">Date must be today or later</mat-error>
     </mat-form-field>
 
     <div class="list-form-field">
         <mat-form-field>
             <mat-label>Add this task to the category:</mat-label>
-            <mat-select>
+            <mat-select formControlName="category">
                 <mat-option *ngFor="let category of categories" [value]="category">
                     {{ category }}
                 </mat-option>
             </mat-select>
+            <mat-error *ngIf="categoryCtrl.hasError('required')">Category is required</mat-error>
         </mat-form-field>
         <mat-icon matTooltip="Create new category" (click)="openCreateCategoryDialog()">playlist_add</mat-icon>
     </div>
 
     <div class="dialog-actions">
         <button mat-stroked-button color="primary" mat-dialog-close>Cancel</button>
-        <button mat-flat-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Save the task</button>
+        <button mat-flat-button color="primary" [mat-dialog-close]="data" cdkFocusInitial
+            [disabled]="!taskNameCtrl.valid || !dateCtrl.valid || !categoryCtrl.valid">Save the task</button>
     </div>
-</div>
+</form>
