task cards in single category updated

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="buttons">
-    <app-view-all-tasks (click)="toggle()"></app-view-all-tasks>
+    <app-view-all-tasks (click)="toggle()" [text]="showCategories ? 'View all tasks' : 'View categories' "></app-view-all-tasks>
     <app-create-new-task></app-create-new-task>
 </div>
 <app-category-list *ngIf="showCategories"></app-category-list>
