--- a/src/app/tasks/components/single-category/single-category.component.html
+++ b/src/app/tasks/components/single-category/single-category.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="category" class="container">
+<!-- <div *ngIf="category" class="container">
   <div class="header">
     <h3>{{ category.title | titlecase }}</h3>
     <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="menu button" class="menu-button">
@@ -18,4 +18,28 @@
     </mat-menu>
   </div>
   <app-task class="task-card-list"></app-task>
+</div> -->
+
+<div *ngIf="category" class="container">
+  <div class="header">
+    <h3>{{ category.title | titlecase }}</h3>
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="menu button" class="menu-button">
+      <mat-icon class="menu-icon">more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>
+        <mat-icon>edit</mat-icon>
+        <span>Edit category</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon><span class="material-symbols-outlined">
+            delete_forever
+          </span></mat-icon>
+        <span>Delete category</span>
+      </button>
+    </mat-menu>
+  </div>
+  <div *ngFor="let task of category.tasks">
+    <app-task-card [task]="task" class="task-card-list"></app-task-card>
+  </div>
 </div>
